# FarmingSim

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  animation.cpp  animation.hpp  objects.cpp  objects.hpp  raylib_game.cpp  tilemaploader.cpp  tilemaploader.hpp
src/resources/TileMap/: grass.tiled-session  mapped.tmj  mapped.tmx  maptest.csv
